# src/Backend/Dto/CheckInDto.cs
@@ -1,0 +1,12 @@
+﻿namespace Backend.Dto;
+
+public record CheckInRequest ( Guid ClassId);
+
+public record CheckInResponse(
+    
+    string Message,
+    string CourseCode,
+    DateTimeOffset Timestamp,
+    string status // present || late
+
+    );
